Bug 314446 - changing read-only flag discards Folder name
Summary: changing read-only flag discards Folder name
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-05 08:59 UTC by Martin Koller
Modified: 2013-03-03 17:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2013-02-05 08:59:45 UTC
I have a vcard directory addressbook defined which I gave the name "std"
After using it I discovered that it had the read-only flag set
I now changed the read-only flag to false and suddenly the name of the addressbook was changed to "akonadi_vcarddir_resource_4"

Reproducible: Always
Comment 1 Laurent Montel 2013-02-05 09:10:54 UTC
I confirm it.
it resets to default setting => change icons/change name
Comment 2 Tobias Koenig 2013-03-03 17:34:02 UTC
Git commit 88b4257c716bc31cecc7ff4c7904b1f924d66f1f by Tobias Koenig.
Committed on 03/03/2013 at 18:32.
Pushed by tokoe into branch 'KDE/4.10'.

Keep custom name/icon of resource collection on collection sync

To ensure that the user modifies the display name of the resource
collection and not the collection name itself, we have to preset
the display name in the EntityDisplayAttribute already.

Additionally the clearCache() call must be removed, it's not needed
if we use the directory path as remoteId, because then the collection
sync algorithm will cleanup the collection with the old remoteId.
FIXED-IN: 4.10.2

M  +2    -2    resources/icaldir/icaldirresource.cpp
M  +2    -2    resources/vcarddir/vcarddirresource.cpp

http://commits.kde.org/kdepim-runtime/88b4257c716bc31cecc7ff4c7904b1f924d66f1f